--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "repository": "\\",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "mongodb": "^3.0.0-rc0",
     "vm2": "^3.5.2"
   }
 }
